--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,23 @@
 Package: geocoder
-Title: What the Package Does (One Line, Title Case)
+Title: Provide geocoding service for R users.
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Net", "Zhang", , "zhang.11091@osu.edu", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Provide geocoding service for R users.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    crayon,
+    dplyr,
+    furrr,
+    glue,
+    httr,
+    magrittr,
+    purrr,
+    rlang,
+    sf,
+    stringr,
+    tibble
